objects/DMAPP__Dealmaker_Core_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>These settings control some core Dealmaker Behaviour.</description>
    <fields>
        <fullName>DMAPP__Amount_Field__c</fullName>
        <description>This is the amount field mapping.It allows customers to set which field they use as the amount (In some cases the standard opportunity amount field is not the one used)</description>
        <inlineHelpText>This is the amount field mapping.It allows customers to set which field they use as the amount (In some cases the standard opportunity amount field is not the one used)</inlineHelpText>
        <label>Amount Field Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Chatter_Snooze_Time__c</fullName>
        <defaultValue>30.0</defaultValue>
        <description>Surpress update messages for Dealmaker pages for these amount of minutes</description>
        <inlineHelpText>This is the number (in minutes) controlling the regularity of chatter notifications as users update their Dealmaker Opportunities. No more than 1 chatter notification can be generated within this time duration for each type of update on an opportunity.</inlineHelpText>
        <label>Chatter Snooze Time</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Create_Shadow_Opp_Job_Query_Restriction__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <description>This field allows us to specify  query where clause which restricts which opportunities are considered by the Create Shadow Opp Bulk Job. By default the batch job creates shadow opportunities for all open opportunities , if shadow opportunity creation is enabled for opportunity owner.</description>
        <inlineHelpText>This field allows us to specify  query where clause which restricts which opportunities are considered by the Create Shadow Opp Bulk Job. By default the batch job creates shadow opportunities for all open opportunities , if shadow opportunity creation is</inlineHelpText>
        <label>Bulk enable - advanced query settings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Create_Shadow_Opp_during_Opp_Upsert__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field controls whether or not Dealmaker Triggers will create a &apos;shadow&apos; Dealmaker Opportunity during the execution on an Opportunity Insert. If checked the Dealmaker triggers will automatically create a shadow opportunity when the opportunity is created</description>
        <inlineHelpText>This field controls whether or not Dealmaker Triggers will create a &apos;shadow&apos; Dealmaker Opportunity during the execution on an Opportunity Insert. If checked the Dealmaker triggers will automatically create a shadow opportunity when the opportunity is crea</inlineHelpText>
        <label>Auto enable Dealmaker for new Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Create_Shadow_Opp_for_Open_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field affects the behavior of the batch job which is run after install to create Dealmaker shadow opportunities. If this flag is checked the batch job will only create shadow opportunities for open opportunities as opposed to for open opportunities and closed opportunities</description>
        <inlineHelpText>This field affects the behavior of the batch job which is run after install to create Dealmaker shadow opportunities. If this flag is checked the batch job will only create shadow opportunities for open opportunities as opposed to for open opportunities a</inlineHelpText>
        <label>Bulk enable Dealmaker for open Opps only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field to disable Chatter updates for Dealmaker pages.</description>
        <inlineHelpText>Use this field to disable Chatter updates for Dealmaker pages.</inlineHelpText>
        <label>Salesforce Chatter Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Click_to_Dial_On_Contact_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting allows an admin to disable the ability to click to dial from the Mobile Political Map and Mobile Smart Call Planner contact detail pages</description>
        <inlineHelpText>This setting allows an admin to disable the ability to click to dial from the Mobile Political Map and Mobile Smart Call Planner contact detail pages</inlineHelpText>
        <label>Disable Click to Dial On Contact Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disable_Click_to_Email_on_Contact_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting allows an admin to disable the ability to click to email from the Mobile Political Map and Mobile Smart Call Planner contact detail pages</description>
        <inlineHelpText>This setting allows an admin to disable the ability to click to email from the Mobile Political Map and Mobile Smart Call Planner contact detail pages</inlineHelpText>
        <label>Disable Click to Email on Contact Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Disabled_Trigger_List__c</fullName>
        <description>This setting allows us to selective disable Dealmaker triggers should that be required. The value of this field should be a comma separated list of trigger names. This field should only be used by TAS group administrators</description>
        <inlineHelpText>This setting allows us to selective disable Dealmaker triggers should that be required. The value of this field should be a comma separated list of trigger names. This field should only be used by TAS group administrators</inlineHelpText>
        <label>Disabled Trigger List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Enable_Contact_Profile_Image__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Contact Profile Image</description>
        <inlineHelpText>Enable the Contact Profile Image</inlineHelpText>
        <label>Enable Contact Profile Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Enable_Dealmaker_ID_Stamping__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting controls whether or not Dealmaker will stamp its model objects with an external DealmakerID which facilitates migration.</description>
        <inlineHelpText>This setting controls whether or not Dealmaker will stamp its model objects with an external DealmakerID which facilitates migration.</inlineHelpText>
        <label>Enable Dealmaker ID Stamping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Enable_FLS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Field Level Security</description>
        <inlineHelpText>Enable Field Level Security</inlineHelpText>
        <label>Enable FLS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Enable_New_Chatter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable New Chatter (using SF widget)</description>
        <inlineHelpText>Enable New Chatter (using SF widget)</inlineHelpText>
        <label>Use Dealmaker Chatter Inline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Enable_Team_View_Plus_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Team View+ can provide coaching to user based on the opportunities in a particular Team View. This feature is disabled by default by can be enabled with this setting.</description>
        <label>Enable Team View+ Coaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Help_URL_base__c</fullName>
        <description>Specify the base URL for the help links</description>
        <inlineHelpText>Specify the base URL for the help links</inlineHelpText>
        <label>Help URL base</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DMAPP__Is_QA_Test_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is QA Test Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Master_Record_Type_Name__c</fullName>
        <defaultValue>&quot;Master&quot;</defaultValue>
        <label>Master Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Mock_Today__c</fullName>
        <description>Allows user to override the today() function.</description>
        <label>Mock Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Temp1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting uses Apex Controllers to invoke the Reports / Analytics API rather than REST API calls.  In professional edition orgs the REST API is not accessible.</description>
        <inlineHelpText>This setting uses Apex Controllers to invoke the Reports / Analytics API rather than REST API calls.  In professional edition orgs the REST API is not accessible.</inlineHelpText>
        <label>Use Apex API for Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Temp2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario

Check to disable value map in AM.</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario

Check to disable value map in AM.</inlineHelpText>
        <label>Temp2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Temp3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>This is currently being used to control the behavior when Dealmaker makes updates to the Salesforce opportunity. This setting should be left unticked unless otherwise instructed by your TAS Group engagement manager.</inlineHelpText>
        <label>Temp3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__TempStr1__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__TempStr2__c</fullName>
        <description>Temporary custom config setting that may be used in a patch scenario</description>
        <inlineHelpText>Temporary custom config setting that may be used in a patch scenario</inlineHelpText>
        <label>TempStr2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Dealmaker Core Settings</label>
</CustomObject>